# ego_bezier

./: .gitignore  COMPARISON_WITH_ORIGINAL.md  COMPILATION_FIX.md  COMPILATION_SUCCESS.md  FLIGHT_ISSUES_SUMMARY.md  Jude_help_doc.md  PERFORMANCE_METRICS_SYSTEM.md  QUICK_FIX.md  QUICK_START_METRICS.md  README.md  README_FIXES.md  README_METRICS.txt  START_HERE.md  VIEW_METRICS_DOCKER.md  add_logging.py  analyze_metrics.sh  check_flight_status.sh  copy_metrics_to_host.sh  diagnose_bezier  rename_to_bezier.sh  run_log.txt  test_bezier
bags/: swarm_payload_20260422_120227.topics.txt
markdown/: ANALYSIS_SUMMARY.md  BEZIER_OPTIMIZATION_FORMULATION.md  Codex_swarm_1.md  DOC_INDEX.md  FIX_SUMMARY.md  FLIGHT_EVALUATION_GUIDE.md  FLIGHT_ISSUES_FIX.md  IMPLEMENTATION_REPORT.md  Jude_help_doc.md  LOCAL_FRAME_INDEX.md  METRICS_IMPROVEMENT_GUIDE.md  METRICS_INTEGRATION_GUIDE.md  METRICS_SOLUTION_SUMMARY.md  METRICS_TROUBLESHOOTING.md  MODIFICATION_SUMMARY.md  QUICK_START_LOCAL_FRAME.md  README_LOCAL_FRAME.md  RELATIVE_POSITION_GUIDE.md  RELATIVE_POSITION_IMPLEMENTATION.md  SWARM_PROJECT_OVERVIEW.md  SWARM_QUICK_START.md  SWARM_README.md  SWARM_STAGE6_ACCEPTANCE_SAMPLE.md  SWARM_STAGE6_INTEGRATION_ACCEPTANCE.md  SWARM_SYSTEM_README.md  TESTENV_IMPLEMENTATION_SUMMARY.md  TEST_CHECKLIST.md  VISUALIZATION_FIX_SUMMARY.md  VISUALIZATION_GUIDE.md  fixed_testenv_guide.md
python_file/: visualize_flight.py
scripts/: compare_planners.py  diagnose_bezier.cpp  evaluate_flight.py  follower_tracking_diagnosis.py  insert_marker.py  modify_optimizer.py  modify_optimizer_robust.py  plot_bspline_bezier_comparison.py  test_fixed_cross.sh  test_local_frame.sh  verify_swarm_system.sh  view_metrics_http.py  visualize_metrics.py
scripts/bezier_perf/: bezier_opt_perf_parse.py  bezier_opt_perf_plot.py  run_bezier_perf_batch.py
scripts/compare/: optimizer_comparison.py
scripts/compare/analysis_results/: per_trial_metrics.csv  summary.txt
scripts/compare/analysis_results/parameter_scan/: parameter_scan_metrics.csv  (+1 more)
scripts/compare/bezier/: bezier_optimizer.cpp  gradient_descent_optimizer.cpp
scripts/tracking_picture/: uav_1_tracking_20260409_080034.csv  uav_1_tracking_20260410_023952.csv  uav_1_tracking_20260410_024114.csv  uav_1_tracking_20260410_122829.csv  uav_1_tracking_20260410_124419.csv  uav_1_tracking_20260410_125829.csv  uav_1_tracking_20260410_125918.csv  uav_1_tracking_20260410_132542.csv  uav_1_tracking_20260410_132649.csv  uav_1_tracking_20260410_143811.csv  uav_1_tracking_20260411_015715.csv  uav_2_tracking_20260409_080034.csv  uav_2_tracking_20260410_023952.csv  uav_2_tracking_20260410_024114.csv  uav_2_tracking_20260410_122829.csv  uav_2_tracking_20260410_124419.csv  uav_2_tracking_20260410_125829.csv  uav_2_tracking_20260410_125918.csv  uav_2_tracking_20260410_132649.csv  uav_2_tracking_20260410_143811.csv  uav_2_tracking_20260411_015715.csv
shell/: analyze_flight.sh  apply_flight_fixes.sh  integrate_metrics.sh  run_testenv.sh  test_visualization.sh  verify_fixes.sh
shfiles/: payload.sh  playbag.sh  playbag_static_traj.sh  record.sh
src/planner/bezier_opt/: CMakeLists.txt  package.xml
src/planner/bezier_opt/include/bezier_opt/: bezier_optimizer.h  cooperative_payload_optimizer.h  payload_geometry.h  piecewise_bezier.h
src/planner/bezier_opt/src/: bezier_optimizer.cpp  bezier_optimizer.cpp.backup  bezier_optimizer.cpp.bak  cooperative_payload_optimizer.cpp  payload_geometry.cpp  piecewise_bezier.cpp  test_bezier.cpp
src/planner/bspline_opt/: CMakeLists.txt
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/include/plan_manage/: custom_swarm_algorithm.h  ego_replan_fsm.h  ego_replan_fsm.h.backup  ego_replan_fsm.h.bak  local_coordinate_system.h  payload_constraint_guard.h  plan_container.hpp  planner_manager.h  planner_metrics.h  swarm_follower_fsm.h  swarm_master_coordinator.h  swarm_master_publisher.h  swarm_trajectory_generator.h
src/planner/plan_manage/launch/: TESTENV_README.md  advanced_param.xml  advanced_param.xml.bak  default.rviz  first_testenv.launch  rviz.launch  second_testenv.launch  simple_run.launch  simulator.xml  simulator.xml.backup  swarm_follower_agent.launch  swarm_follower_local_map_real.yaml  swarm_follower_local_map_sim.yaml  swarm_longhall.launch  swarm_longhall_fixed_schedule.yaml  swarm_master_grid_map.yaml  swarm_master_only.launch  swarm_master_params.yaml  swarm_multi_real_template.launch  swarm_multi_sim.launch  swarm_nonehall.launch  swarm_payload.launch  swarm_preflight_check.launch  swarm_run.launch  swarm_run_v2.launch  third_testenv.launch
src/planner/plan_manage/launch/navigation_demo/: navigation_demo.launch  navigation_demo.rviz
src/planner/plan_manage/msg/: Bezier.msg  Bspline.msg  SwarmBezierTrajectory.msg  SwarmState.msg
src/planner/plan_manage/src/: ego_replan_fsm.cpp  ego_replan_fsm.cpp.backup  ego_replan_fsm.cpp.bak  local_coordinate_system.cpp  local_map_visualizer.cpp  metrics_recorder_node.cpp  planner_manager.cpp  planner_manager.cpp.bak  planner_metrics.cpp  swarm_agent_state_reporter_node.cpp  swarm_comm_visualizer_node.cpp  swarm_follower_fsm.cpp  swarm_follower_fsm_node.cpp  swarm_follower_guidance_optimizer_node.cpp  swarm_guidance_mux_node.cpp  swarm_guidance_traj_visualizer_node.cpp  swarm_master_coordinator.cpp  swarm_master_node.cpp  swarm_master_publisher.cpp  swarm_master_publisher_node.cpp  swarm_payload_visualizer_node.cpp  swarm_preflight_check_node.cpp  swarm_program_a_node.cpp  swarm_program_b_node.cpp  swarm_program_door_node.cpp  swarm_program_narrow_node.cpp  swarm_program_ring_node.cpp  swarm_program_slit_node.cpp  swarm_startup_sync_node.cpp  swarm_takeoff_gate_node.cpp  swarm_traj_generator_node.cpp  swarm_trajectory_generator.cpp  traj_server.cpp  trajectory_state_publisher.cpp  trajectory_visualizer.cpp
src/planner/traj_utils/: CMakeLists.txt  package.xml
src/planner/traj_utils/include/traj_utils/: planning_visualization.h
src/planner/traj_utils/msg/: SwarmAgentState.msg  SwarmStartupStatus.msg
src/planner/traj_utils/src/: planning_visualization.cpp
(+11 files in other folders)
