<?xml version="1.0"?>
<package format="2">
  <name>ego_planner</name>
  <version>0.0.0</version>
  <description>EGO-Planner with Piecewise Bezier Curve Trajectories</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>plan_env</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>bezier_opt</build_depend>
  <build_depend>traj_utils</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>plan_env</build_export_depend>
  <build_export_depend>path_searching</build_export_depend>
  <build_export_depend>bezier_opt</build_export_depend>
  <build_export_depend>traj_utils</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>plan_env</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>bezier_opt</exec_depend>
  <exec_depend>traj_utils</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
