<?xml version="1.0"?>
<package format="2">
  <name>traj_utils</name>
  <version>0.0.0</version>
  <description>Trajectory utilities package with Bezier curve support</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bezier_opt</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>bezier_opt</build_export_depend>
  <build_export_depend>path_searching</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>bezier_opt</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
